--- a/AED/.vscode/settings.json
+++ b/AED/.vscode/settings.json
@@ -1,13 +1,14 @@
 {
+    "C_Cpp.errorSquiggles": "disabled",
     "files.associations": {
-        "algorithm": "cpp",
-        "string": "cpp",
+        "vector": "cpp",
+        "set": "cpp",
         "iostream": "cpp",
+        "*.tcc": "cpp",
         "ostream": "cpp",
         "array": "cpp",
         "atomic": "cpp",
         "bit": "cpp",
-        "*.tcc": "cpp",
         "cctype": "cpp",
         "clocale": "cpp",
         "cmath": "cpp",
@@ -18,14 +19,16 @@
         "cstdint": "cpp",
         "cstdio": "cpp",
         "cstdlib": "cpp",
+        "ctime": "cpp",
         "cwchar": "cpp",
         "cwctype": "cpp",
         "deque": "cpp",
+        "list": "cpp",
         "map": "cpp",
-        "set": "cpp",
+        "string": "cpp",
         "unordered_map": "cpp",
-        "vector": "cpp",
         "exception": "cpp",
+        "algorithm": "cpp",
         "functional": "cpp",
         "iterator": "cpp",
         "memory": "cpp",
@@ -39,6 +42,7 @@
         "type_traits": "cpp",
         "utility": "cpp",
         "initializer_list": "cpp",
+        "iomanip": "cpp",
         "iosfwd": "cpp",
         "istream": "cpp",
         "limits": "cpp",
@@ -47,7 +51,7 @@
         "sstream": "cpp",
         "stdexcept": "cpp",
         "streambuf": "cpp",
-        "typeinfo": "cpp"
-    },
-    "C_Cpp.errorSquiggles": "disabled"
+        "typeinfo": "cpp",
+        "stack": "cpp"
+    }
 }
